<resources>
    <string name="app_name">C.F.D.S</string>
    <string name="welcome_to_c_f_d_s_n_please_choose_the_mode_of_login">WELCOME TO C.F.D.S \n PLEASE CHOOSE THE MODE OF LOGIN</string>
    <string name="user_login">USER LOGIN</string>
    <string name="vendor_login">VENDOR LOGIN</string>
    <string name="login_your_account">LOGIN YOUR ACCOUNT</string>
    <string name="welcome_enter_your_phone_number_without_country_code">Welcome\nEnter Your Phone Number Without Country Code</string>
    <string name="enter_your_phone_number_here">Enter Your Phone Number Here</string>
    <string name="proceed">PROCEED</string>
    <string name="verify_the_one_time_password">VERIFY THE ONE TIME PASSWORD</string>
    <string name="enter_the_otp_sent_on_your_phone_number_nproceed_to_verify">ENTER THE OTP SENT ON YOUR PHONE NUMBER\nPROCEED TO VERIFY</string>
    <string name="enter_the_otp_sent">ENTER THE OTP SENT</string>
    <string name="verify">VERIFY</string>
    <string name="profile">PROFILE</string>
    <string name="logout">LOGOUT</string>
    <string name="records">RECORDS</string>
    <string name="item">ITEM</string>
    <string name="used_kg">USED KG</string>
    <string name="total_kg">TOTAL KG</string>
    <string name="wheat">WHEAT</string>
    <string name="rice">RICE</string>
    <string name="last_updated">LAST UPDATED</string>
    <string name="vendor">VENDOR</string>
    <string name="oil">OIL</string>
    <string name="vendor_scanner">VENDOR SCANNER</string>
    <string name="_10">10</string>
    <string name="_5">5</string>
    <string name="issue_requirement">ISSUE REQUIREMENT</string>
    <string name="new_requirement">NEW REQUIREMENT</string>
    <string name="submit">SUBMIT</string>
    <string name="generated_invoice">GENERATED INVOICE</string>
    <string name="total">TOTAL</string>
    <string name="print">PRINT</string>
    <string name="user_form">USER FORM</string>
    <string name="enter_your_name_here">Enter Your Name Here</string>
    <string name="enter_your_postal_address_here">Enter Your Postal address Here</string>
    <string name="enter_your_annual_income_here">Enter Your Annual Income Here</string>
    <string name="i_hereby_confirm_that_the_information_provided_to_you_is_correct">I Hereby Confirm That The Information Provided To You is correct</string>
    <string name="add_uid">ADD Uid</string>
    <string name="ngo_login">NGO LOGIN</string>
    <string name="from">from</string>
</resources>