<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    tools:context=".VerifyActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        tools:ignore="UselessParent">
        <RelativeLayout
            android:id="@+id/r1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/white">
            <TextView
                android:id="@+id/t1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/verify_the_one_time_password"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/r2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/r1"
            android:layout_marginTop="30dp">
            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_centerInParent="true"
                android:src="@drawable/otp_logo"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/r3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/r2"
            android:layout_alignParentBottom="true">
            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/enter_the_otp_sent_on_your_phone_number_nproceed_to_verify"
                android:textColor="#171313"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/otp_sent"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/text1"
                android:layout_margin="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/draw1"
                android:gravity="center"
                android:hint="@string/enter_the_otp_sent"
                android:importantForAutofill="no"
                android:inputType="numberPassword"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="16sp" />
            <Button
                android:id="@+id/verify"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_below="@+id/otp_sent"
                android:layout_centerHorizontal="true"
                android:layout_margin="30dp"
                android:background="@drawable/button1"
                android:text="@string/verify"
                android:textColor="#000" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>