<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    tools:context=".InformationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <RelativeLayout
            android:id="@+id/r1"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_margin="10dp"
            android:background="@drawable/white">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="18dp"
                android:background="@drawable/fds_logo"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:text="@string/user_form"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="normal"
                tools:ignore="RelativeOverlap,RtlHardcoded" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/r2"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_below="@+id/r1"
            android:layout_marginTop="30dp">
            <RelativeLayout
                android:id="@+id/ir1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="15dp">
                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:autofillHints=""
                    android:hint="@string/enter_your_name_here"
                    android:inputType="textPersonName"
                    android:textAllCaps="true"
                    android:textSize="13sp" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/ir2"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@id/ir1"
                android:layout_marginStart="15dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="15dp">
                <EditText
                    android:id="@+id/editAdd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:hint="@string/enter_your_postal_address_here"
                    android:importantForAutofill="no"
                    android:inputType="textPostalAddress"
                    android:textAllCaps="true"
                    android:textSize="13sp" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/ir3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/ir2"
                android:layout_marginStart="15dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="15dp">
                <EditText
                    android:id="@+id/editIncome"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:hint="@string/enter_your_annual_income_here"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textSize="13sp" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/ir4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/ir3"
                android:layout_marginStart="15dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="15dp">
                <EditText
                    android:id="@+id/textPhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:enabled="false"
                    android:gravity="center_vertical"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    tools:ignore="Autofill,LabelFor,TextFields" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/ir5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/ir4"
                android:layout_marginStart="15dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="15dp">
                <EditText
                    android:id="@+id/textId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:enabled="false"
                    android:gravity="center_vertical"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    tools:ignore="Autofill,LabelFor,TextFields" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/r3"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/r2">
            <CheckBox
                android:id="@+id/chk1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/i_hereby_confirm_that_the_information_provided_to_you_is_correct"
                android:textSize="12.2sp" />
            <Button
                android:id="@+id/submit"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_below="@+id/chk1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/button1"
                android:text="@string/submit"
                android:textColor="#000"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>