<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    tools:context=".UserSelectActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <RelativeLayout
            android:id="@+id/r1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="5dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerInParent="true"
                android:src="@drawable/fds_logo"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/r2"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@+id/r1"
            android:layout_margin="20dp"
            android:gravity="center">

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:text="@string/welcome_to_c_f_d_s_n_please_choose_the_mode_of_login"
                android:textSize="16sp"
                android:typeface="sans" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text1"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/user_mode"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:background="@drawable/draw1"
                    android:padding="12dp"
                    android:text="@string/user_login"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:text="@string/ngo_login"
                    android:padding="12dp"
                    android:layout_marginLeft="30dp"
                    android:id="@+id/vendor_mode"
                    android:background="@drawable/draw1"
                    tools:ignore="ButtonStyle,RtlHardcoded" />
            </LinearLayout>
        </RelativeLayout>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/logo_png_d"
            tools:ignore="ContentDescription" />
    </RelativeLayout>
</LinearLayout>